Package_Tools/include-C/Ubuntu_26.04/gtk-4.0/gsk/in arbeit/h/gskglshadernode.h

/* GSK - The GTK Scene Kit
 *
 * Copyright 2016  Endless
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 2 of the License, or (at your option) any later version.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this library. If not, see <http://www.gnu.org/licenses/>.
 */

#pragma once

#if !defined (__GSK_H_INSIDE__) && !defined (GTK_COMPILATION)
#error "Only <gsk/gsk.h> can be included directly."
#endif

#include <gsk/gsktypes.h>

#include <gsk/gskglshader.h>





typedef struct _GskGLShaderNode                 GskGLShaderNode ;

#define GSK_TYPE_GL_SHADER_NODE (gsk_gl_shader_node_get_type())

extern //xxxxxGLIB_DEPRECATED_IN_4_16_FOR(GtkGLArea)
GType                   gsk_gl_shader_node_get_type             (void) ;
extern //xxxxxGLIB_DEPRECATED_IN_4_16_FOR(GtkGLArea)
GskRenderNode *         gsk_gl_shader_node_new                  (GskGLShader              *shader,
                                                                 const graphene_rect_t    *bounds,
                                                                 GBytes                   *args,
                                                                 GskRenderNode           **children,
                                                                 guint                     n_children);
extern //xxxxxGLIB_DEPRECATED_IN_4_16_FOR(GtkGLArea)
guint                   gsk_gl_shader_node_get_n_children       (const GskRenderNode      *node) ;
extern //xxxxxGLIB_DEPRECATED_IN_4_16_FOR(GtkGLArea)
GskRenderNode *         gsk_gl_shader_node_get_child            (const GskRenderNode      *node,
                                                                 guint                     idx) ;
extern //xxxxxGLIB_DEPRECATED_IN_4_16_FOR(GtkGLArea)
GBytes *                gsk_gl_shader_node_get_args             (const GskRenderNode      *node) ;
extern //xxxxxGLIB_DEPRECATED_IN_4_16_FOR(GtkGLArea)
GskGLShader *           gsk_gl_shader_node_get_shader           (const GskRenderNode      *node) ;